# noid_wrapper

./: .gitignore  LICENSE  README.md  config.yaml  notebook.ipynb  pyproject.toml
metadata/malformed/: gmgsvh5ch59_BL_Aardvark copy.json  gmgsvh5ch59_BL_Aardvark.json  gmgsvh5ch6v_BL_Aardvark copy.json  gmgsvh5ch6v_BL_Aardvark.json  gmgsvm42w83_BL_Aardvark.json  gmgsvm42w9n_BL_Aardvark.json
metadata/public/: gmgs0c4sj3x_BL_Aardvark.json  gmgs0c4sj4g_BL_Aardvark.json  gmgs0c4sj51_BL_Aardvark.json  gmgs0c4sj6k_BL_Aardvark.json  gmgs0c4sj74_BL_Aardvark.json  gmgs0g3gx6q_BL_Aardvark.json  gmgs0g3gx78_BL_Aardvark.json  gmgs0k26990_BL_Aardvark.json  gmgs0k26b0j_BL_Aardvark.json  gmgs0k26b13_BL_Aardvark.json
metadata/restricted/: gmgsvh5ch59_BL_Aardvark.json  gmgsvh5ch6v_BL_Aardvark.json  gmgsvm42w83_BL_Aardvark.json  gmgsvm42w9n_BL_Aardvark.json  gmgsvm42x06_BL_Aardvark.json  gmgsvm42x1r_BL_Aardvark.json  gmgsvq2s91x_BL_Aardvark.json  gmgsvq2s92g_BL_Aardvark.json  gmgsvq2s931_BL_Aardvark.json
src/noid_wrapper/: noid_client.py  notebook.ipynb
src/noid_wrapper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_getfetch.py  test_noid_client.py
