[tool.poetry]
name = "noid-wrapper"
version = "0.1.0"
description = "Python wrapper for interacting with the NOID Perl utility."
authors = ["Stephen Appel <srappel@uwm.edu>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.0"
click = "^8.0"
exceptiongroup = "1.2.2"
flake8 = "^7.1"
pytest = "^7.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
